--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -26,8 +26,8 @@
             android:title="@string/priority">
             <intent
                 android:action="android.intent.action.MAIN"
-                android:targetClass="com.RichardLuo.notificationpush.Application"
-                android:targetPackage="com.RichardLuo.notificationpush" />
+                android:targetClass="com.TeddyNight.notificationpush.Application"
+                android:targetPackage="com.TeddyNight.notificationpush" />
         </Preference>
         <Preference
             android:key="logcat"
