--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -55,6 +55,13 @@
             android:title="@string/ringForEach" />
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="hailInstalled"
+            android:summary="@string/summary_hailInstalled"
+            android:title="@string/hail_installed" />
+        <!--
+        <CheckBoxPreference
+            android:layout_height="match_parent"
+            android:defaultValue="false"
             android:key="sendQQ"
             android:summary="@string/summary_avatar"
             android:title="@string/avatar" />
@@ -62,6 +69,7 @@
             android:key="Login"
             android:summary="@string/summary_login"
             android:title="@string/login" />
+        -->
     </PreferenceCategory>
 
 </PreferenceScreen>
